Fix "Data type with modifiers are space sensitive"

umbrello/model_utils.{h,cpp}
- New function normalize(QString type) removes interspersed spaces from
  given type name where possible: Between word and non word, between non
  word and word, between non word and non word.  Space between word and
  word is left intact to preserve names such as "unsigned long long".
- In function findUMLObject:
  - On assigning to name apply normalize() to inName.
  - As a peripheral change, fix bug number in #ifdef TRY_BUGFIX_120862.

umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
- In function typeOfDeclaration for-loop over ptrOpList, on assigning to
  `text' remove spaces from ptrOpList.at(i)->text() as done in loop over
  declarator->arrayDimensionList().

umbrello/dialogs/dialog_utils.cpp
- In function askName apply Model_Utils::normalize() on returned name.

umbrello/dialogs/widgets/umldatatypewidget.cpp
- In functions applyAttribute, applyEntityAttribute, applyOperation,
  applyParameter, on assigning to typeName apply Model_Utils::normalize
  on m_editField->currentText().

umbrello/umldoc.cpp
- In function findDatatype apply Model_Utils::normalize() to name before
  processing.

BUG: 369464
FIXED-IN:2.33.80 (KDE releases 22.03.80)